# manufacture-core

./: Cargo.toml  README.md
src/: commands.rs  comp.rs  events.rs  lib.rs  main.rs  prelude.rs  resources.rs  storage.rs  systems.rs
src/ECS/: builders.rs  commands.rs  comp.rs  dispatcher.rs  entity.rs  events.rs  fetch.rs  mod.rs  prefab.rs  prelude.rs  resource.rs  storage.rs  system.rs  world.rs
src/ECS/dispatcher/: mod.rs  stage.rs
src/ECS/fetch/: mod.rs  query.rs  request.rs
src/core/: commands.rs  comp.rs  events.rs  mod.rs  resources.rs  storage.rs  systems.rs  types.rs
src/core/types/: mod.rs  vector.rs
src/types/: mod.rs  vector.rs
