[package]
name = "manufacture_core"
version = "0.1.0"
authors = ["Maxis Maximov Jr."]
edition = "2024"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
manufacture_engine = { git = "https://github.com/MaxisMaximov/manufacture-engine.git" }
