[package]
name = "manufacture_core"
version = "0.3.11-0.2.0"
authors = ["Maxis Maximov Jr."]
edition = "2024"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
manufacture_engine = { git = "https://github.com/MaxisMaximov/manufacture-engine.git", tag = "1.0.0" }

[features]
cmd_render_test = []